# svlint-plugin-sample

./: Cargo.toml  README.md  build.rs
.github/workflows/: regression.yml
src/: another_plugin.rs  forbidden_regex.rs  lib.rs  sample_plugin.rs
testcases/fail/: basic1.sv  basic_syntax.sv  basic_text.sv
testcases/pass/: basic1.sv
