[package]
name = "svlint-plugin-sample"
version = "0.1.0"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/svlint-plugin-sample"
license = "MIT"
readme = "README.md"
description = "A sample project of svlint plugin"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
svlint    = "0.7.2"
sv-parser = "0.13.1"
