[package]
name = "svlint-plugin-sample"
version = "0.1.0"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/svlint-plugin-sample"
license = "MIT"
readme = "README.md"
description = "A sample project of svlint plugin"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
#svlint = { path = "../svlint" }
#svlint    = "0.8.0" TODO: Update svlint dependency pin before PR review.
svlint = { git = "https://github.com/DaveMcEwan/svlint.git", rev = "31c793f" }
sv-parser = "0.13.1"
regex     = "1" # Only used for the rule "forbidden_regex".
